@@ -1,4 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.127 2010/07/19 02:54:36 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.128 2010/07/24 22:23:03 alexb Exp $
+
+Feeds XXX
+---------
+
+- #838018-12 Remove Formatted Number CCK mapper, cannot be properly tested, see
+  #857928.
 
 Feeds 6.x 1.0 Beta 3, 2010-07-18
 --------------------------------
